# Recordlab_host

./: .gitignore  CMakeLists.txt  README.md  RecordLab.code-workspace  Recordlab重构计划.md
app/: recordlab_cli.cpp  recordlab_host_app.cpp
config/: glasses_device_catalog.json  host_runtime.json
docs/: CONTRACTS.md  Nebula_手动排障手册.md  PLAN.md  RecordLab Host 仓库业务耦合全面检查报告.md  nviz_start_record_first_wave.md  todo.md  关于各个commit修改的说明.md  各个模块作用及其范围.md  学习记录.md  打包、发布、部署更新.md
docs/用户手册/: 01_程序启动与基础使用.md  02_NViz使用手册.md  03_BSP使用手册.md  04_MCU使用手册.md  05_Android使用手册.md  06_Nebula使用手册.md  README.md
host_scripts/: build.sh  deploy_bin_release.sh  install_dependencies.sh  package_bin_release.sh  package_release.sh  start_recordlab.sh
include/recordlab_core/: logger.h  master_client.h  name_resolver.h  node_base.h  script_runner.h  user_log.h
include/recordlab_echo/: echo.h  pubsub.h  stdio_channel.h
include/recordlab_host/agents/: agent_config_loader.h  agent_manager.h  agent_proxy.h
include/recordlab_host/bus/: host_message_bus.h  message_types.h
include/recordlab_host/common/: logger.h  process_handle.h  runtime_config.h  virtual_node_config_manager.h
include/recordlab_host/communication/: echo_action_client.h  echo_topic_subscriber.h
include/recordlab_host/data/: camera_shared_memory.h  data_receiver.h  data_registry_server.h  sensor_queue.h  topic_parser.h
include/recordlab_host/lifecycle/: agent_health_state.h  watchdog.h
include/recordlab_host/scripts/: scripts_actuator.h
include/recordlab_host/ui/: data_output_directory_widget.h  data_page.h  entry_page.h  imu_runtime_bridge.h  log_text_edit.h  main_window.h  script_page.h  sensor_workspace_widget.h  status_display_widget.h  virtual_nodes_page.h  workspace_page.h
include/recordlab_master/: master_client.h  master_server.h  name_resolver.h  registries.h  script_runner.h  shm_ring_buffer.h  transport.h
include/recordlab_system_nodes/health_monitor/: health_monitor.h
include/recordlab_system_nodes/launcher/: launcher_node.h
include/recordlab_system_nodes/lifecycle_manager/: lifecycle_manager.h
include/recordlab_system_nodes/recorder/: recorder_node.h
include/recordlab_system_nodes/watchdog/: watchdog_node.h
include/recordlab_tool_nodes/recordlab_gui/: command_page.h  entry_page.h  recordlab_gui_window.h  script_page.h
include/recordlab_xreal_runtime/: xreal_bridge_client.h  xreal_device_catalog.h  xreal_sdk_probe.h
scripts/: package_release.sh  start_recordlab.sh
src/: master_client.cpp  name_resolver.cpp  script_runner.cpp  shm_ring_buffer.cpp  transport.cpp
src/agents/: agent_config_loader.cpp  agent_manager.cpp  agent_proxy.cpp
src/bus/: host_message_bus.cpp
src/common/: logger.cpp  process_handle.cpp  runtime_config.cpp  virtual_node_config_manager.cpp
src/communication/: echo_action_client.cpp  echo_topic_subscriber.cpp
src/data/: camera_shared_memory.cpp  data_receiver.cpp  data_registry_server.cpp  sensor_queue.cpp  topic_parser.cpp
src/lifecycle/: watchdog.cpp
src/recordlab_core/: logger.cpp  master_client.cpp  name_resolver.cpp  node_base.cpp  script_runner.cpp  user_log.cpp
src/recordlab_echo/: shm_ring_buffer.cpp  stdio_channel.cpp  transport.cpp
src/recordlab_master/: master_server.cpp
src/recordlab_system_nodes/health_monitor/: health_monitor.cpp
src/recordlab_system_nodes/launcher/: launcher_config.cpp  launcher_node.cpp
src/recordlab_system_nodes/lifecycle_manager/: lifecycle_manager.cpp
src/recordlab_system_nodes/recorder/: recorder_node.cpp
src/recordlab_system_nodes/watchdog/: watchdog_node.cpp
src/recordlab_tool_nodes/recordlab_gui/: command_page.cpp  entry_page.cpp  gui_config.cpp  recordlab_gui_window.cpp  script_page.cpp
src/recordlab_xreal_runtime/: xreal_bridge_client.cpp  xreal_device_catalog.cpp  xreal_sdk_probe.cpp
src/scripts/: scripts_actuator.cpp
src/ui/: data_output_directory_widget.cpp  data_page.cpp  entry_page.cpp  imu_runtime_bridge.cpp  log_text_edit.cpp  main_window.cpp  script_page.cpp  sensor_workspace_widget.cpp  status_display_widget.cpp  virtual_nodes_page.cpp  workspace_page.cpp
test/: test_action_req_rep_recovery.cpp  test_echo_module_boundary.cpp  test_echo_stdio_channel.cpp  test_graph_events.cpp  test_gui_config.cpp  test_gui_layout_contract.cpp  test_health_monitor.cpp  test_install_config_paths.cpp  test_lifecycle_manager_recovery.cpp  test_master_client.cpp  test_master_server_dependency_boundary.cpp  test_multinode_launcher_contract.cpp  test_name_resolver.cpp  test_recorder_node.cpp  test_registries.cpp  test_script_runner.cpp  test_shm_ring_buffer.cpp  test_system_logger.cpp  test_type_registry_encoding.cpp  test_user_log.cpp  test_watchdog_node.cpp
tests/: test_agent_config_loader.cpp  test_agent_manager_proxy_integration.cpp  test_camera_shared_memory_reader.cpp  test_data_receiver_streams.cpp  test_data_registry_server.cpp  test_echo_python_integration.cpp  test_echo_topic_encoding.cpp  test_host_message_bus.cpp  test_imu_runtime_bridge.cpp  test_logger_context.cpp  test_process_handle.cpp  test_runtime_config.cpp  test_scripts_actuator_lifecycle.cpp  test_scripts_actuator_stop.cpp  test_sensor_queue.cpp  test_ui_layout_contract.cpp  test_virtual_node_config_manager.cpp  test_watchdog_lifecycle.cpp  test_watchdog_state_machine.cpp
tools/: health_monitor.cpp  lifecycle_manager.cpp  recorder_node.cpp  recordlab_cli.cpp  recordlab_gui.cpp  recordlab_launcher.cpp  recordlab_master_app.cpp  recordlab_master_cli.cpp  recordlab_master_main.cpp  recordlab_script_runner.cpp  recordlab_script_shim.py  watchdog_node.cpp
